src/routes/snapshots/wallet__routes__api__tests__create_asset.snap
---
source: src/routes/api.rs
expression: new_asset
---
{
  "id": 1,
  "name": "bitcoin",
  "unit_value": "10"
}
