src/routes/snapshots/wallet__routes__api__tests__list_assets.snap
---
source: src/routes/api.rs
expression: assets
---
[
  {
    "id": 1,
    "name": "bitcoin",
    "unit_value": "10.0"
  }
]
