src/routes/snapshots/wallet__routes__api__tests__update_asset.snap
---
source: src/routes/api.rs
expression: updated_asset
---
{
  "id": 1,
  "name": "ethereum",
  "unit_value": "20"
}
